--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,6 +34,11 @@ jobs:
         with:
           channel: "stable"
 
+      - name: Enable web for Flutter
+        run: |
+          flutter config --enable-web
+          flutter precache --web
+
       - name: Sync deps (include dev)
         run: UV_CACHE_DIR=.uvcache uv sync --extra dev
 
