--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -43,7 +46,10 @@ jobs:
         run: UV_CACHE_DIR=.uvcache uv sync --extra dev
 
       - name: Build Flet web (hash routing, base-url)
-        run: UV_CACHE_DIR=.uvcache uv run flet build web --route-url-strategy hash --base-url /flet-monte-carlo-pi
+        run: |
+          UV_CACHE_DIR=.uvcache uv run flet build web --route-url-strategy hash --base-url /flet-monte-carlo-pi
+          ls -lah build/web
+          test -f build/web/index.html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
