--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
     "flet==0.28.3",
+    "flet-cli==0.28.3",
 ]
 
 [project.optional-dependencies]
