--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -46,8 +46,17 @@ jobs:
         run: UV_CACHE_DIR=.uvcache uv sync --extra dev
 
       - name: Build Flet web (hash routing, base-url)
+        env:
+          FLUTTER_HOME: ${{ env.FLUTTER_HOME }}
         run: |
-          UV_CACHE_DIR=.uvcache uv run flet build web --route-url-strategy hash --base-url /flet-monte-carlo-pi
+          echo "Using Flutter from: ${FLUTTER_HOME}"
+          UV_CACHE_DIR=.uvcache uv run flet build web \
+            --flutter-sdk "${FLUTTER_HOME}" \
+            --route-url-strategy hash \
+            --base-url /flet-monte-carlo-pi \
+            --skip-flutter-doctor \
+            --no-rich-output \
+            -v
           ls -lah build/web
           test -f build/web/index.html
 
