--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,6 +37,37 @@ jobs:
         with:
           channel: "stable"
 
+      - name: Build stub watchdog wheel (pure Python for web)
+        run: |
+          python -m pip install build
+          mkdir -p /tmp/watchdog_stub/watchdog/observers
+          cat > /tmp/watchdog_stub/watchdog/__init__.py <<'PY'
+__all__ = ["observers", "__version__"]
+__version__ = "4.0.0"
+PY
+          cat > /tmp/watchdog_stub/watchdog/observers/__init__.py <<'PY'
+class Observer:
+    def __init__(self, *_, **__): ...
+    def schedule(self, *_, **__): ...
+    def start(self): ...
+    def stop(self): ...
+    def join(self, *_, **__): ...
+PY
+          cat > /tmp/watchdog_stub/pyproject.toml <<'PY'
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "watchdog"
+version = "4.0.0"
+description = "Stub watchdog for Flet web build (no native code)."
+authors = [{name="stub"}]
+license = {text = "MIT"}
+requires-python = ">=3.8"
+PY
+          python -m build /tmp/watchdog_stub -w -o /tmp/watchdog_wheels
+
       - name: Enable web for Flutter
         run: |
           flutter config --enable-web
@@ -50,6 +81,7 @@ jobs:
           echo "Flutter root: ${FLUTTER_ROOT}"
           export PATH="${FLUTTER_ROOT}/bin:${PATH}"
           flutter --version
+          export PIP_FIND_LINKS="/tmp/watchdog_wheels"
           export PIP_INDEX_URL="https://pypi.org/simple"
           export PIP_EXTRA_INDEX_URL="https://pypi.flet.dev/simple"
           UV_CACHE_DIR=.uvcache uv run flet build web \
